chore: make rm force

--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "clean:archive": "rm excali.tar.gz excali.zip",
+    "clean:archive": "rm -f excali.tar.gz excali.zip",
     "tar": "tar cvfz excali.tar.gz -C dist/ --exclude editor/excalidraw-assets-dev .",
     "zip": "cd dist && zip -r ../excali.zip . -x 'editor/excalidraw-assets-dev/*'"
   },
