--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -1,42 +1,33 @@
 {
-  "name": "excali",
+  "name": "wxt-react-starter",
+  "description": "manifest.json description",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "clean:archive": "rm -f excali.tar.gz excali.zip",
-    "tar": "tar cvfz excali.tar.gz -C dist/ --exclude editor/excalidraw-assets-dev .",
-    "zip": "cd dist && zip -r ../excali.zip . -x 'editor/excalidraw-assets-dev/*'"
+    "dev": "wxt",
+    "dev:firefox": "wxt -b firefox",
+    "build": "wxt build",
+    "build:firefox": "wxt build -b firefox",
+    "zip": "wxt zip",
+    "zip:firefox": "wxt zip -b firefox",
+    "compile": "tsc --noEmit",
+    "postinstall": "wxt prepare"
   },
   "dependencies": {
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "idb": "^8.0.0",
-    "nanoid": "^5.0.7",
-    "next-themes": "^0.3.0",
-    "radash": "^12.1.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-use": "^17.5.1",
-    "sonner": "^1.5.0",
+    "@tabler/icons-react": "^3.23.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@crxjs/vite-plugin": "^1.0.14",
-    "@types/bun": "latest",
-    "@types/chrome": "^0.0.277",
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
+    "@types/chrome": "^0.0.280",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@wxt-dev/module-react": "^1.1.1",
     "tailwindcss": "^3.4.14",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.15"
-  },
-  "module": "src/main.tsx",
-  "type": "module"
+    "typescript": "^5.6.3",
+    "wxt": "^0.19.13"
+  }
 }
