--- a/packages/excali-local/tsconfig.json
+++ b/packages/excali-local/tsconfig.json
@@ -2,9 +2,6 @@
   "extends": "./.wxt/tsconfig.json",
   "compilerOptions": {
     "allowImportingTsExtensions": true,
-    "jsx": "react-jsx",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    "jsx": "react-jsx"
   }
 }
