--- a/packages/excali-page/package.json
+++ b/packages/excali-page/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "postinstall": "bun run ./setup-excalidraw-assets.js",
-    "build": "tsc && vite build --outDir=../excali-local/public/editor",
+    "build": "vite build --outDir=../excali-local/public/editor",
     "shadcn:add": "bunx --bun shadcn@latest add"
   },
   "dependencies": {
@@ -13,22 +13,24 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tabler/icons-react": "^3.21.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "i18next": "^24.0.2",
     "idb": "^8.0.0",
+    "jotai": "^2.10.1",
     "lucide-react": "^0.454.0",
     "nanoid": "^5.0.7",
     "next-themes": "^0.3.0",
     "radash": "^12.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-i18next": "^15.1.3",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
     "swapy": "^0.4.2",
     "tailwind-merge": "^2.5.4",
-    "@tabler/icons-react": "^3.21.0",
-    "jotai": "^2.10.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
