--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "local:dev": "bun --filter ./packages/excali-local dev",
     "local:build": "bun --filter ./packages/excali-local build",
     "local:clean:archive": "bun --filter ./packages/excali-local clean:archive",
-    "local:tar": "bun --filter ./packages/excali-local tar"
+    "local:tar": "bun --filter ./packages/excali-local tar",
+    "local:zip": "bun --filter ./packages/excali-local zip"
   },
   "workspaces": [
     "packages/*"
