--- a/packages/excali-page/package.json
+++ b/packages/excali-page/package.json
@@ -37,6 +37,7 @@
     "@types/bun": "latest",
     "@types/node": "^22.7.5",
     "@types/react": "^18.0.0",
+    "@types/chrome": "^0.0.280",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.20",
