--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -8,8 +8,8 @@
     "dev": "wxt",
     "build": "wxt build",
     "build:firefox": "wxt build -b firefox --mv3",
-    "zip": "wxt zip",
-    "zip:firefox": "wxt zip -b firefox --mv3",
+    "zip": "cd .output/chrome-mv3 && zip -r ../excali-chrome.zip . -x 'editor/excalidraw-assets-dev/*'",
+    "zip:firefox": "cd .output/firefox-mv3 && zip -r ../excali-firefox.zip . -x 'editor/excalidraw-assets-dev/*'",
     "compile": "tsc --noEmit",
     "clean:archive": "rm -f excali.tar.gz",
     "tar": "tar cvfz excali.tar.gz -C .output/chrome-mv3 --exclude editor/excalidraw-assets-dev .",
