--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -12,7 +12,8 @@
     "zip:firefox": "cd .output/firefox-mv3 && zip -r ../excali-firefox.zip . -x 'editor/excalidraw-assets-dev/*'",
     "compile": "tsc --noEmit",
     "clean:archive": "rm -f excali.tar.gz",
-    "tar": "tar cvfz excali.tar.gz -C .output/chrome-mv3 --exclude editor/excalidraw-assets-dev .",
+    "tar": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3 --exclude editor/excalidraw-assets-dev .",
+    "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3 --exclude editor/excalidraw-assets-dev .",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
