chore: add some clean script

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "page:dev": "bun --filter ./packages/excali-page dev",
     "page:build": "BUILD_FOR_EXTENSION=1 bun --filter ./packages/excali-page build",
+    "local:clean:editor": "bun --filter ./packages/excali-local clean:editor",
+    "local:clean:output": "bun --filter ./packages/excali-local clean:output",
     "local:dev": "bun --filter ./packages/excali-local dev",
     "local:clean:archive": "bun --filter ./packages/excali-local clean:archive",
     "local:build": "bun --filter ./packages/excali-local build",
