--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -11,7 +11,8 @@
     "zip": "cd .output/chrome-mv3 && zip -r ../excali-chrome.zip . -x 'editor/excalidraw-assets-dev/*'",
     "zip:firefox": "cd .output/firefox-mv3 && zip -r ../excali-firefox.zip . -x 'editor/excalidraw-assets-dev/*'",
     "compile": "tsc --noEmit",
-    "clean:archive": "rm -f excali.tar.gz",
+    "clean:editor": "rm -rf public/editor",
+    "clean:output": "rm -rf .output",
     "tar": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3 --exclude editor/excalidraw-assets-dev .",
     "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3 --exclude editor/excalidraw-assets-dev .",
     "postinstall": "wxt prepare"
