--- a/packages/excali-page/package.json
+++ b/packages/excali-page/package.json
@@ -6,6 +6,7 @@
     "dev": "vite",
     "postinstall": "bun run ./setup-excalidraw-assets.js",
     "build": "vite build --outDir=../excali-local/public/editor",
+    "test": "vitest --run",
     "shadcn:add": "bunx --bun shadcn@latest add"
   },
   "dependencies": {
@@ -33,17 +34,21 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
     "@types/bun": "latest",
+    "@types/chrome": "^0.0.280",
     "@types/node": "^22.7.5",
     "@types/react": "^18.0.0",
-    "@types/chrome": "^0.0.280",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
     "autoprefixer": "^10.4.20",
+    "happy-dom": "^15.11.7",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^4.6.3",
-    "vite": "^5.4.10"
+    "vite": "^5.4.10",
+    "vitest": "^2.1.8"
   },
   "module": "src/main.tsx",
   "type": "module"
