--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,12 +15,7 @@ jobs:
         uses: actions/checkout@v4
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: Ensure bunjs is install
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl tar zip unzip
-          curl -fsSL https://bun.sh/install > install.sh
-          sudo bash install.sh
+      - uses: oven-sh/setup-bun@v2
       - name: Install
         run: bun install
       - name: Test Page
