--- a/packages/excali-page/package.json
+++ b/packages/excali-page/package.json
@@ -10,6 +10,8 @@
     "shadcn:add": "bunx --bun shadcn@latest add"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
@@ -29,7 +31,6 @@
     "react-i18next": "^15.1.3",
     "react-use": "^17.5.1",
     "sonner": "^1.5.0",
-    "swapy": "^0.4.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
