--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -6,15 +6,15 @@
   "type": "module",
   "scripts": {
     "dev": "wxt",
-    "build": "wxt build",
+    "build:chrome": "wxt build",
     "build:firefox": "wxt build -b firefox --mv3",
-    "zip": "cd .output/chrome-mv3 && zip -r ../excali-chrome.zip . -x 'editor/excalidraw-assets-dev/*'",
+    "zip:chrome": "cd .output/chrome-mv3 && zip -r ../excali-chrome.zip . -x 'editor/excalidraw-assets-dev/*'",
     "zip:firefox": "cd .output/firefox-mv3 && zip -r ../excali-firefox.zip . -x 'editor/excalidraw-assets-dev/*'",
-    "compile": "tsc --noEmit",
+    "tar:chrome": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3 --exclude editor/excalidraw-assets-dev .",
+    "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3 --exclude editor/excalidraw-assets-dev .",
     "clean:editor": "rm -rf public/editor",
     "clean:output": "rm -rf .output",
-    "tar": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3 --exclude editor/excalidraw-assets-dev .",
-    "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3 --exclude editor/excalidraw-assets-dev .",
+    "clean:archive": "rm -rf *.tar.gz",
     "postinstall": "wxt prepare"
   },
   "dependencies": {
