feat: upgrade TailwindCSS to v4 and refactor style system
- Upgrade tailwindcss and related dependencies to v4; remove legacy tailwind.config.js files
- Unify all CSS entrypoints to use `@import "tailwindcss"`; remove `@tailwind` directives
- Move all component styles and theme variables inline to src/index.css, supporting flexible theming and dark mode
- Switch component library style to "new-york" and enable lucide icon library
- Refactor Button, ScrollArea, Separator, Tooltip, Sonner, and other UI components for TailwindCSS v4 syntax and variables
- Update PostCSS config to use "@tailwindcss/postcss" plugin
- Integrate @tailwindcss/vite plugin in Vite config for native TailwindCSS v4 HMR
- Clean up and upgrade dependencies; remove unused tailwindcss-animate and related plugins

--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -22,15 +22,15 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^1.7.1",
-    "tailwind-merge": "^2.5.3",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.5.3"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/chrome": "^0.0.280",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@wxt-dev/module-react": "^1.1.1",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.12",
     "typescript": "^5.6.3",
     "wxt": "^0.19.13"
   }
