--- a/packages/excali-page/package.json
+++ b/packages/excali-page/package.json
@@ -10,30 +10,31 @@
     "shadcn:add": "bunx --bun shadcn@latest add"
   },
   "dependencies": {
-    "@excalidraw/excalidraw": "0.18.0",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@radix-ui/react-scroll-area": "^1.2.0",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
+    "@excalidraw/excalidraw": "0.18.0",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tabler/icons-react": "^3.24.0",
-    "class-variance-authority": "^0.7.0",
+    "@tailwindcss/vite": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "i18next": "^24.0.2",
     "idb": "^8.0.0",
     "jotai": "^2.13.1",
-    "lucide-react": "^0.468.0",
+    "lucide-react": "^0.542.0",
     "nanoid": "^5.0.7",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.4.6",
     "radash": "^12.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.1.3",
     "react-use": "^17.6.0",
-    "sonner": "^1.5.0",
-    "tailwind-merge": "^2.5.4",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
@@ -45,10 +46,11 @@
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "@vitejs/plugin-react-swc": "^3.7.1",
-    "autoprefixer": "^10.4.20",
+    "autoprefixer": "^10.4.21",
     "happy-dom": "^15.11.7",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
     "typescript": "^4.6.3",
     "vite": "^5.4.10",
     "vitest": "^2.1.8"
