--- a/packages/excali-page/package.json
+++ b/packages/excali-page/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
-    "@excalidraw/excalidraw": "npm:@azzgo/excalidraw@0.18.0-csp.6",
+    "@excalidraw/excalidraw": "./azzgo-excalidraw-0.18.0-csp.6.tgz",
     "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
