feat: gallery sidebar UI and script improvements and update readme
refactor sidebar actions, update archive scripts, bump version to 1.5.0

move cleanup action, improve code formatting and readability

refer to issue #1

--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -2,16 +2,16 @@
   "name": "wxt-react-starter",
   "description": "manifest.json description",
   "private": true,
-  "version": "1.4.0",
+  "version": "1.5.0",
   "type": "module",
   "scripts": {
     "dev": "wxt",
     "build:chrome": "wxt build",
     "build:firefox": "wxt build -b firefox --mv3",
-    "zip:chrome": "cd .output/chrome-mv3 && zip -r ../excali-chrome.zip . -x 'editor/excalidraw-assets-dev/*'",
-    "zip:firefox": "cd .output/firefox-mv3 && zip -r ../excali-firefox.zip . -x 'editor/excalidraw-assets-dev/*'",
-    "tar:chrome": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3 --exclude editor/excalidraw-assets-dev .",
-    "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3 --exclude editor/excalidraw-assets-dev .",
+    "zip:chrome": "cd .output/chrome-mv3 && zip -r ../excali-chrome.zip .",
+    "zip:firefox": "cd .output/firefox-mv3 && zip -r ../excali-firefox.zip .",
+    "tar:chrome": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3",
+    "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3",
     "clean:editor": "rm -rf public/editor",
     "clean:output": "rm -rf .output",
     "clean:archive": "rm -rf *.tar.gz",
