--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -10,8 +10,8 @@
     "build:firefox": "wxt build -b firefox --mv3",
     "zip:chrome": "cd .output/chrome-mv3 && zip -r ../excali-chrome.zip .",
     "zip:firefox": "cd .output/firefox-mv3 && zip -r ../excali-firefox.zip .",
-    "tar:chrome": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3",
-    "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3",
+    "tar:chrome": "tar cvfz excali.chrome.tar.gz -C .output/chrome-mv3 .",
+    "tar:firefox": "tar cvfz excali.firefox.tar.gz -C .output/firefox-mv3 .",
     "clean:editor": "rm -rf public/editor",
     "clean:output": "rm -rf .output",
     "clean:archive": "rm -rf *.tar.gz",
