--- a/packages/excali-page/package.json
+++ b/packages/excali-page/package.json
@@ -27,6 +27,7 @@
     "i18next": "^24.0.2",
     "idb": "^8.0.0",
     "jotai": "^2.13.1",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.542.0",
     "nanoid": "^5.0.7",
     "next-themes": "^0.4.6",
