--- a/packages/excali-local/package.json
+++ b/packages/excali-local/package.json
@@ -18,6 +18,7 @@
     "postinstall": "wxt prepare"
   },
   "dependencies": {
+    "excali-shared": "*",
     "@tabler/icons-react": "^3.24.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
