--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "local:clean": "bun ./scripts/clean.ts",
     "local:build": "bun ./scripts/build.ts",
     "local:tar": "bun ./scripts/tar.ts",
-    "local:zip": "bun ./scripts/zip.ts"
+    "local:zip": "bun ./scripts/zip.ts",
+    "sync:version": "bash ./scripts/sync-version.sh"
   },
   "workspaces": [
     "packages/*"
